--- a/css/style.css
+++ b/css/style.css
@@ -905,6 +905,7 @@ input {
   font-weight: 700;
   font-size: 18px;
   margin-bottom: 12px;
+  color: var(--main-color);
 }
 
 .payment-summary-row {
