--- a/css/style.css
+++ b/css/style.css
@@ -727,15 +727,15 @@ input {
 
 @media (max-width: 480px) {
   .product-grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr)); /* changed from 2 to original 1 */  
     justify-content: center;
     align-items: start;
     width: 100%;
-    padding: 0 8px;
+    padding: 0 2px; /***  changed from 8x to 2px  ***/
   }
   .product-card {
     width: 100%;
-    max-width: 180px;
+   max-width: auto;/* commented out for some bs it coused in small screens*/
     margin: 0 auto;
     /* Let height be auto for variable card sizes */
   }
