--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ a {
   background: var(--nav-background);
   color: var(--text-mix-color);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 16px;
   box-shadow: 0 1px 3px -2px black;
   position: fixed;
@@ -65,6 +65,23 @@ a {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.searchIn {
+  cursor: pointer;
+}
+
+.searchIn:hover {
+  color: #222;
+  cursor: pointer;
+}
+
+.fa-user {
+  color: var(--main-color);
+}
+
+.fa-user:hover {
+  color: var(--random-color);
 }
 
 .nav-logo p {
@@ -482,7 +499,7 @@ input {
 
 .product-card img {
   width: 100%;
-  height: 200px;
+  height: auto;
   object-fit: cover;
   border-radius: 10px;
 }
