--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(./fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css); /*** fallback for local devenv offline typeshit .gitignored ***/
 @import url(style-footer.css);
 @import url(./../auth/css/auth-styles.css);
+@import url(dashboard-loading.css);
 
 :root {
   --accent-color: #007bff;
