--- a/dashboard/css/my-products.css
+++ b/dashboard/css/my-products.css
@@ -662,6 +662,10 @@ body {
     font-size: 20px;
 }
 
+a {
+    text-decoration: none;
+}
+
 @media screen and (max-width: 768px) {
     .sidebar {
         position: fixed;
